--- a/src/main.html
+++ b/src/main.html
@@ -234,5 +234,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
     <script src="https://gordonchantc.github.io/polyu-mooc-edx/src/js/onLoad.js"></script>
     <!-- Include above on EDX raw html -->
+    <!-- <script src="./js/onLoad.js"></script> -->
   </body>
 </html>
