--- a/src/main.html
+++ b/src/main.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <div id="seq_content" role="tabpanel" aria-labelledby="tab_0">
+    <main id="main" aria-label="Content">
       <div>
         Edx main content
 
@@ -228,8 +228,11 @@
           </p>
         </div>
       </div>
-    </div>
+    </main>
 
+    <!-- Include below on EDX raw html -->
+    <!-- <script src="https://gordonchantc.github.io/polyu-mooc-edx/src/js/onLoad.js"></script> -->
+    <!-- Include above on EDX raw html -->
     <script src="./js/onLoad.js"></script>
   </body>
 </html>
