update banner prepend

--- a/src/main.html
+++ b/src/main.html
@@ -10,7 +10,7 @@
       <div>
         Edx main content
 
-        <div id="lipsum" style="font-size: x-large">
+        <div class="vert-mod">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
             laoreet metus sed neque egestas, vel pharetra dolor efficitur. Proin
